--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -395,7 +395,7 @@ img.cover {
 }
 
 .product-banner {
-    height: 80px;
+    //height: 80px;
     color: #ffff;
     overflow: hidden;
 
@@ -406,7 +406,7 @@ img.cover {
         position: absolute;
         top: 0;
         right: 0;
-        z-index: -1;
+        z-index: 0;
         filter: blur(4px);
         width: calc(100% + 10px);
 
@@ -419,6 +419,7 @@ img.cover {
         padding: 1rem;
         line-height: initial;
         font-size: 1.5rem;
+        position: relative;
     }
 }
 
